[package]
name = "LuckFox"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
env_logger = "0.11.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }


[build-dependencies]
cc = "1.0"

[target.armv7-unknown-linux-musleabihf]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-L", "/workspace",
    "-l", "sqlite3"
]
linker = "arm-linux-gnueabihf-gcc"